@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=liw
-VERSION=1.2.8
+VERSION=1.2.9
 
 DEPENDENCY="zeda=1.6.22"
 
